# polymult-1.3

./: .polymult-1.3.tex.swp  Makefile.am  config.h.in  configure  configure.ac  init.c  init.h  main.c  mult.c  mult.h  polymult-1.3.tex
